--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html lang="pl">
 <head>
+  <script src="script.js"></script>
    <link rel="stylesheet"
    href="style.css">
    <a href="cennik.html">cennik</a>
@@ -11,7 +12,7 @@
  <div>
  <body background="BT stal.jpg">
    <script>
-  alert("Witamy na stronie Bdg optimun  kliknij ok");
+  alert("Witamy na stronie Bdg optimun kliknij ok");
    </script>
    <h1 class="op">Firma BGD Optimun</h1>
     <img src="pt stal.jpg">
